# tf2_bot_detector

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  LICENSE  README.md  TODO  attach  attach-gdb  attach-libnamed.sh  build_names  code-style.md  config  index.md  install-all  install-data  preload  report-crash  tf2_bot_detector.sln  update  vcpkg-configuration.json  vcpkg.json  vcpkg_packages.txt  vcpkg_setup.bat
include/: .gitignore  CMakeLists.txt  Constants.hpp  DetourHook.hpp  MiscTemporary.hpp  PlayerTools.hpp  angles.hpp  averager.hpp  base64.hpp  bytepatch.hpp  chatlog.hpp  chatstack.hpp  common.hpp  conditions.hpp  config.h.in  crits.hpp  entitycache.hpp  entityhitboxcache.hpp  enums.hpp  gameinfo.hpp  globals.h  hack.hpp  headshake.hpp  helpers.hpp  hitrate.hpp  hooks.hpp  hoovy.hpp  init.hpp  ipc.hpp  itemtypes.hpp  json.hpp  localplayer.hpp  navparser.hpp  nullnexus.hpp  pathio.hpp  playerlist.hpp  playerresource.h  prediction.hpp  projlogging.hpp  sconvars.hpp  (+10 more)
include/classinfo/: classinfo.hpp  css.gen.hpp  css_constexpr.gen.hpp  dab.gen.hpp  dab_constexpr.gen.hpp  dummy.gen.hpp  dump.hpp  dynamic.gen.hpp  hl2dm.gen.hpp  hl2dm_constexpr.gen.hpp  tf2.gen.hpp  tf2_constexpr.gen.hpp  tf2c.gen.hpp  tf2c_constexpr.gen.hpp
include/copypasted/: CDumper.hpp  CSignature.h  Netvar.h
include/core/: cvwrapper.hpp  e8call.hpp  interfaces.hpp  logging.hpp  macros.hpp  netvars.hpp  offsets.hpp  profiler.hpp  sdk.hpp  sharedobj.hpp  vfunc.hpp
include/hacks/: Achievement.hpp  Aimbot.hpp  AntiAim.hpp  AntiAntiAim.hpp  AntiBackstab.hpp  AntiCheat.hpp  AutoJoin.hpp  AutoTaunt.hpp  Backtrack.hpp  CMakeLists.txt  CatBot.hpp  ChatCommands.hpp  ESP.hpp  FollowBot.hpp  Misc.hpp  MiscAimbot.hpp  NavBot.hpp  Ragdolls.hpp  SeedPrediction.hpp  SkinChanger.hpp  Spam.hpp  Thirdperson.hpp  Trigger.hpp  UberSpam.hpp  Warp.hpp  hacklist.hpp
include/hooks/: GetFriendPersonaName.hpp  HookTools.hpp  HookedMethods.hpp  PreDataUpdate.hpp
include/reclasses/: CTFGCClientSystem.hpp  CTFInventoryManager.hpp  CTFParty.hpp  CTFPartyClient.hpp  CTFPlayerShared.hpp  C_BaseAnimating.hpp  C_BaseCombatWeapon.hpp  C_BaseEntity.hpp  C_BasePlayer.hpp  C_MannVsMachineStats.hpp  C_TEFireBullets.hpp  C_TFWeaponBase.hpp  C_TFWeaponBaseGun.hpp  C_TFWeaponBaseMelee.hpp  ITFGroupMatchCriteria.hpp  reclasses.hpp
include/sdk/: CGameRules.h  HUD.h  ScreenSpaceEffects.h  c_basetempentity.h  dt_recv_redef.h  igamemovement.h  iinput.h  imaterialsystemfixed.h  in_buttons.h  netmessage.hpp  usercmd.hpp
include/settings/: Bool.hpp  Float.hpp  Int.hpp  Key.hpp  Manager.hpp  Registered.hpp  Rgba.hpp  SettingCommands.hpp  Settings.hpp  SettingsIO.hpp  String.hpp
include/visual/: CMakeLists.txt  EffectChams.hpp  EffectGlow.hpp  EventLogging.hpp  SDLHooks.hpp  atlas.hpp  colors.hpp  drawing.hpp  drawmgr.hpp  picopng.hpp
src/: CMakeLists.txt  EventLogging.cpp  MiscTemporary.cpp  PlayerTools.cpp  angles.cpp  chatlog.cpp  chatstack.cpp  conditions.cpp  crits.cpp  entitycache.cpp  entityhitboxcache.cpp  globals.cpp  hack.cpp  headshake.cpp  helpers.cpp  hitrate.cpp  hooks.cpp  hoovy.cpp  ipc.cpp  itemtypes.cpp  localplayer.cpp  navparser.cpp  nospread.cpp  nullnexus.cpp  pathfinder.cpp  pathio.cpp  playerlist.cpp  playerresource.cpp  prediction.cpp  projlogging.cpp  sconvars.cpp  soundcache.cpp  targethelper.cpp  teamroundtimer.cpp  textmode.cpp  tfmm.cpp  trace.cpp  velocity.cpp  votelogger.cpp
src/classinfo/: CMakeLists.txt  classinfo.cpp  dump.cpp  dynamic.gen.cpp
src/copypasted/: CMakeLists.txt  CSignature.cpp  Netvar.cpp
src/core/: CMakeLists.txt  cvwrapper.cpp  entry.cpp  init.cpp  interfaces.cpp  logging.cpp  netvars.cpp  profiler.cpp  sharedobj.cpp
src/hacks/: Achievement.cpp  Aimbot.cpp  Announcer.cpp  AntiAim.cpp  AntiAntiAim.cpp  AntiBackstab.cpp  AntiCheat.cpp  AntiDisguise.cpp  AutoBackstab.cpp  AutoDeadringer.cpp  AutoDetonator.cpp  AutoHeal.cpp  AutoJoin.cpp  AutoReflect.cpp  AutoSticky.cpp  AutoTaunt.cpp  BPExpander.cpp  Backtrack.cpp  BulletTracers.cpp  Bunnyhop.cpp  CMakeLists.txt  CatBot.cpp  ChatCommands.cpp  CritSay.cpp  DataCenter.cpp  DominateMark.cpp  DominateSay.cpp  ESP.cpp  ExplosionCircles.cpp  FollowBot.cpp  KillSay.cpp  KillfeedColor.cpp  Killstreak.cpp  LightESP.cpp  MCHealthbar.cpp  Misc.cpp  MiscAimbot.cpp  MiscPlayerInfo.cpp  NavBot.cpp  Noisemaker.cpp  (+13 more)
src/hooks/: CMakeLists.txt  CanPacket.cpp  CreateMove.cpp  DispatchUserMessage.cpp  EmitSound.cpp  FireEvent.cpp  FireEventClientSide.cpp  FireGameEvent.cpp  GetFriendPersonaName.cpp  GetUserCmd.cpp  HookTools.cpp  IsPlayingTimeDemo.cpp  LevelInit.cpp  LevelShutdown.cpp  Paint.cpp  PreDataUpdate.cpp  RandomInt.cpp  RunCommand.cpp  SendDatagram.cpp  SendNetMsg.cpp  Shutdown.cpp  nographics.cpp  others.cpp
src/reclasses/: CMakeLists.txt  CTFGCClientSystem.cpp  CTFInventoryManager.cpp  CTFParty.cpp  CTFPartyClient.cpp  C_MannVsMachineStats.cpp  C_TEFireBullets.cpp  ITFGroupMatchCriteria.cpp
src/sdk/: CMakeLists.txt  HUD.cpp  KeyValues.cpp  MaterialSystemUtil.cpp  UtlString.cpp  checksum_md5.cpp  (+4 more)
tf2_bot_detector/: .clang-format  ActionManager.cpp  ActionManager.h  Actions.cpp  Actions.h  Application.cpp  Application.h  AsyncObject.h  BaseTextures.cpp  BaseTextures.h  BatchedAction.h  Bitmap.cpp  Bitmap.h  CMakeLists.txt  CachedVariable.h  CheaterList.cpp  CheaterList.h  Clock.cpp  Clock.h  CompensatedTS.cpp  CompensatedTS.h  ConsoleLines.cpp  ConsoleLines.h  DLLMain.cpp  DLLMain.h  DiscordRichPresence.cpp  DiscordRichPresence.h  FileMods.cpp  FileMods.h  Filesystem.cpp  Filesystem.h  GenericErrors.cpp  GenericErrors.h  GithubAPI.cpp  GithubAPI.h  GlobalDispatcher.h  HTTPHelpers.cpp  HTTPHelpers.h  IConsoleLine.h  IConsoleLineListener.h  (+64 more)
tf2_bot_detector_common/: CMakeLists.txt
tf2_bot_detector_updater/: CMakeLists.txt  CMakeSettings.json  Common.h  Resources.base.rc  Update_MSIX.cpp  Update_MSIX.h  Update_Portable.cpp  Update_Portable.h  main.cpp  vcpkg.json
tf2_bot_detector_winrt/: CMakeLists.txt  setup_winrt.bat  tf2_bot_detector_winrt.cpp  tf2_bot_detector_winrt.h
(+440 files in other folders)
