set(files "${CMAKE_CURRENT_LIST_DIR}/angles.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/chatlog.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/chatstack.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/conditions.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/crits.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/entitycache.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/entityhitboxcache.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/pathio.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/globals.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/hack.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/headshake.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/helpers.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/hitrate.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/hooks.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/hoovy.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/ipc.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/itemtypes.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/localplayer.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/playerlist.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/playerresource.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/prediction.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/projlogging.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/sconvars.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/soundcache.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/targethelper.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/teamroundtimer.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/textmode.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/tfmm.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/trace.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/velocity.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/votelogger.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/MiscTemporary.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/navparser.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/nospread.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/nullnexus.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/PlayerTools.cpp")

target_sources(cathook PRIVATE ${files})
list(REMOVE_ITEM ignore_files ${files})
set(ignore_files ${ignore_files} CACHE INTERNAL "")
add_subdirectory(core)
add_subdirectory(classinfo)
add_subdirectory(copypasted)
add_subdirectory(hacks)
add_subdirectory(hooks)
add_subdirectory(reclasses)
add_subdirectory(sdk)
add_subdirectory(settings)

if(EnableVisuals)
    add_subdirectory(visual)
endif()
